# atomic-inference-boilerplate

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.antigravity/: .antigravityrules
docs/specs/: EPIC_001.md  EPIC_002.md  EPIC_003.md  SPEC.md
examples/: basic.py  dynamic_context.py  langgraph_multi_agent.py  langgraph_single_agent.py  with_memory.py
examples/prefect_pipelines/: __init__.py  batch_pipeline.py  document_pipeline.py
src/: __init__.py
src/core/: __init__.py  client.py  renderer.py  types.py  unit.py
src/loaders/: __init__.py  base.py  docx_loader.py  html_loader.py  markdown_loader.py  pdf_loader.py
src/modules/: __init__.py  utils.py  vector_store.py
src/prompts/: extraction.j2
src/prompts/agents/: analyze.j2  chat.j2  reasoning.j2  response.j2  routing.j2  search.j2
src/prompts/base/: system.j2
src/prompts/extraction/: chunk_content.j2  chunk_strategy.j2  metadata.j2  structure.j2
src/schemas/: __init__.py  agents.py  base.py  documents.py
tests/: __init__.py  test_renderer.py  test_unit.py
