[tool.poetry]
name = "atomic-inference"
version = "0.1.0"
description = "Production-ready boilerplate for AI Atomic Inference using JIL Stack (Jinja2, Instructor, LiteLLM)"
authors = ["NghiaCH"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1"
litellm = "^1.0"
instructor = "^1.0"
pydantic = "^2.0"
python-dotenv = "^1.0"
langgraph = "^0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
